[gd_scene load_steps=62 format=2]

[ext_resource path="res://Img/Criadores/frames-DK/02.png" type="Texture" id=1]
[ext_resource path="res://Img/Criadores/frames-DK/01.png" type="Texture" id=2]
[ext_resource path="res://Img/Criadores/frames-DK/16.png" type="Texture" id=3]
[ext_resource path="res://Img/Criadores/frames-DK/10.png" type="Texture" id=4]
[ext_resource path="res://Img/Criadores/frames-DK/06.png" type="Texture" id=5]
[ext_resource path="res://Img/Criadores/frames-DK/04.png" type="Texture" id=6]
[ext_resource path="res://Img/Criadores/frames-DK/13.png" type="Texture" id=7]
[ext_resource path="res://Img/Criadores/frames-DK/08.png" type="Texture" id=8]
[ext_resource path="res://Img/Criadores/frames-DK/05.png" type="Texture" id=9]
[ext_resource path="res://Img/Criadores/frames-DK/12.png" type="Texture" id=10]
[ext_resource path="res://Img/Criadores/frames-DK/07.png" type="Texture" id=11]
[ext_resource path="res://Img/Criadores/frames-DK/15.png" type="Texture" id=12]
[ext_resource path="res://Img/Criadores/frames-DK/14.png" type="Texture" id=13]
[ext_resource path="res://Img/Criadores/frames-DK/03.png" type="Texture" id=14]
[ext_resource path="res://Img/Criadores/frames-DK/09.png" type="Texture" id=15]
[ext_resource path="res://Img/Criadores/frames-DK/11.png" type="Texture" id=16]
[ext_resource path="res://Scripts/DK.gd" type="Script" id=17]
[ext_resource path="res://Img/Criadores/godot_logo-Sheet.png" type="Texture" id=18]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0014_Layer-18.png" type="Texture" id=19]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0013_Layer-19.png" type="Texture" id=20]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0008_Layer-24.png" type="Texture" id=21]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0006_Layer-26.png" type="Texture" id=22]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0027_Layer-5.png" type="Texture" id=23]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0024_Layer-8.png" type="Texture" id=24]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0021_Layer-11.png" type="Texture" id=25]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0030_Layer-2.png" type="Texture" id=26]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0020_Layer-12.png" type="Texture" id=27]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0017_Layer-15.png" type="Texture" id=28]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0016_Layer-16.png" type="Texture" id=29]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0011_Layer-21.png" type="Texture" id=30]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0031_Layer-1.png" type="Texture" id=31]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0028_Layer-4.png" type="Texture" id=32]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0026_Layer-6.png" type="Texture" id=33]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0029_Layer-3.png" type="Texture" id=34]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0025_Layer-7.png" type="Texture" id=35]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0019_Layer-13.png" type="Texture" id=36]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0018_Layer-14.png" type="Texture" id=37]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0023_Layer-9.png" type="Texture" id=38]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0022_Layer-10.png" type="Texture" id=39]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0015_Layer-17.png" type="Texture" id=40]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0012_Layer-20.png" type="Texture" id=41]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0010_Layer-22.png" type="Texture" id=42]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0009_Layer-23.png" type="Texture" id=43]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0007_Layer-25.png" type="Texture" id=44]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0005_Layer-27.png" type="Texture" id=45]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0003_Layer-29.png" type="Texture" id=46]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0002_Layer-30.png" type="Texture" id=47]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0000_Layer-32.png" type="Texture" id=48]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0004_Layer-28.png" type="Texture" id=49]
[ext_resource path="res://Img/Criadores/Frames-Grande/anim_g__0001_Layer-31.png" type="Texture" id=50]
[ext_resource path="res://Img/semFundo.png" type="Texture" id=51]
[ext_resource path="res://Img/Criadores/Frames-Grande/001.png" type="Texture" id=52]
[ext_resource path="res://Img/Criadores/Frames-Grande/002.png" type="Texture" id=53]
[ext_resource path="res://Img/Criadores/Frames-Grande/003.png" type="Texture" id=54]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 51 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 3 ) ],
"loop": false,
"name": "dk",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "paradoDk",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 48 ) ],
"loop": false,
"name": "parado",
"speed": 5.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 31 ), ExtResource( 26 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 23 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 24 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 40 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 41 ), ExtResource( 30 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 21 ), ExtResource( 44 ), ExtResource( 22 ), ExtResource( 45 ), ExtResource( 49 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 50 ), ExtResource( 48 ) ],
"loop": true,
"name": "fantasy",
"speed": 13.0
} ]

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "saindo"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="DK" type="Node2D"]
script = ExtResource( 17 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 80, 176 )
scale = Vector2( 0.109925, 0.11121 )
frames = SubResource( 1 )
animation = "dk"

[node name="fantasy" type="Node" parent="."]

[node name="AnimatedSpriteFantasy" type="AnimatedSprite" parent="fantasy"]
position = Vector2( 78, 80 )
scale = Vector2( 0.125, 0.125 )
frames = SubResource( 2 )
animation = "fantasy"

[node name="godot" type="Node" parent="."]

[node name="godot_logo-Sheet" type="Sprite" parent="godot"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 78, 136 )
texture = ExtResource( 18 )
hframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="godot/godot_logo-Sheet"]
anims/godot = SubResource( 3 )
anims/sumirGodot = SubResource( 4 )
anims/surgirGodot = SubResource( 5 )

[node name="transição" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="transição"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="AnimacaoTransicao" type="AnimationPlayer" parent="transição/ColorRect"]
autoplay = "Entrando"
anims/Entrando = SubResource( 6 )
anims/saindo = SubResource( 7 )

[connection signal="animation_finished" from="CanvasLayer/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="fantasy/AnimatedSpriteFantasy" to="." method="_on_AnimatedSpriteFantasy_animation_finished"]
[connection signal="animation_finished" from="godot/godot_logo-Sheet/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="transição/ColorRect/AnimacaoTransicao" to="." method="_on_AnimacaoTransicao_animation_finished"]
